@@ -378,6 +378,10 @@ gcc version 3.3 20030304 (Apple Computer, Inc. build 1495)
 	virtual void quickbench(fim_int qbi);
 #endif /* FIM_WANT_BENCHMARKS */
 	virtual size_t byte_size(void)const;
+	public:
+#if FIM_WANT_PIC_CMTS
+	ImgDscs id_;
+#endif /* FIM_WANT_PIC_CMTS */
 };
 }
 
